# mpv-companion

./: README.md  companion.py  core.py  panel.py  pyproject.toml  requirements.txt
docs/plans/: 2026-03-03-panel-ui-polish-design.md
