[project]
name = "mpv-companion"
version = "1.0.0"
description = "Watch films with a local AI companion — visual analysis via mpv IPC + LLM"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27.0",
    "pynput>=1.7.6",
    "rich>=13.7.0",
    "PyQt6>=6.6.0",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
]

[project.scripts]
mpv-companion = "panel:main"
mpv-companion-cli = "companion:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
select = ["F", "B", "E", "W"]
ignore = ["E501"]
